--- a/package.json
+++ b/package.json
@@ -11,23 +11,36 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.0.1",
-    "@types/node": "^20.10.4",
-    "@types/react-redux": "^7.1.33",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.3.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/joi": "^17.2.3",
+    "@types/react-datepicker": "^4.19.5",
     "axios": "^1.6.2",
+    "date-fns": "^3.2.0",
+    "joi": "^17.11.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/node": "^20.10.6",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-redux": "^7.1.33",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "classnames": "^2.3.2",
+    "autoprefixer": "^10.4.16",
+    "classnames": "^2.5.1",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
@@ -35,6 +48,7 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "sass": "^1.69.5",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
