--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,17 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+
+    // this fix: Property 'env' does not exist on type 'ImportMeta'.
+    // https://github.com/vitejs/vite/issues/9539#issuecomment-1241657593
+    "types": ["vite/client"]
   },
   "include": ["src", "./declaration.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
