--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "printWidth": 120,
   "semi": false,
   "jsxSingleQuote": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "no-extra-semi": true
 }
