--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.2.0",
+    "@ckeditor/ckeditor5-core": "^41.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@ckeditor/ckeditor5-upload": "^41.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^2.0.1",
@@ -19,6 +23,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/joi": "^17.2.3",
     "@types/react-datepicker": "^4.19.5",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.2",
     "date-fns": "^3.2.0",
     "joi": "^17.11.0",
@@ -33,10 +39,11 @@
     "react-select": "^5.8.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/classnames": "^2.3.1",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/react-dom": "^18.2.22",
     "@types/react-redux": "^7.1.33",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
