--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.2",
     "date-fns": "^3.2.0",
     "joi": "^17.11.0",
+    "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-datepicker": "^4.25.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/classnames": "^2.3.1",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.22",
