--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ckeditor/ckeditor5-core": "^41.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@ckeditor/ckeditor5-upload": "^41.2.0",
+    "@floating-ui/react": "^0.26.10",
     "@hookform/resolvers": "^3.3.4",
     "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^2.0.1",
