--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-datepicker": "^4.19.5",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.2",
     "date-fns": "^3.2.0",
     "joi": "^17.11.0",
