--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.3.0",
+    "@syncfusion/ej2-react-barcode-generator": "^25.1.41",
     "@tailwindcss/forms": "^0.5.7",
     "@types/joi": "^17.2.3",
+    "@types/react-modal": "^3.16.3",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.8",
@@ -32,13 +34,16 @@
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-barcode": "^1.5.1",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-to-print": "^2.15.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
