--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-barcode": "^1.5.1",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.49.2",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
